# ChatApp

./: .babelrc  README.md  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  measure_time.sh  tauri.conf.json
src-tauri/src/: main.rs  protocol.rs
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.js  App2.jsx  index.js
