[package]
name = "app"
version = "0.1.0"
description = "A realtime  distributed code editor with a terminal emulator"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.27"
futures-timer = "3.0.2"
libp2p = { version = "0.52.3", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits"] }
libp2p-webrtc = { version = "0.6.0-alpha", features = ["tokio", "pem"] }
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.68"
tauri = { version = "1.6.4", features = [] }
dotenv = "0.15"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
